--- a/Formularios/formulario.html
+++ b/Formularios/formulario.html
@@ -8,7 +8,10 @@
 <body>
     <from action="" method="get">
         <p>Correo <input type="email" name="Correo" placeholder="joshua@gmail.com" ></p>
-        <input type="hidden" name="enviarcorre" value="...">
+        <input type="submit" name="enviarcorre" value="Enviar">
+        <p>Usuario:<input type="text" name="usuario" placeholder="ruben"></p>
+        <p>Contraseña: <input type="password" name="passwod" minlenght="6"></p>
+        <input type="submit" name="enviarcontraseñayusuario" value="Enviar">
         <p>Nombre: <input  type="text" name="Nombre"> </p>
         <p>Año de nacimento: <input type="number" name="nacimento" min="1900"></p>
         <p>Sexo: 
