--- a/multimedia/multimedia.html
+++ b/multimedia/multimedia.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/estilos.css">
+    <style>
+        #futbol{
+            padding: 1em;
+            border: 1px rgb(8, 0, 0);
+            color: whitesmoke;
+            background-position: top right;
+            background-repeat: no-repeat;
+            background-clip: content-box;
+            background-color: red;
+            background-origin: padding-box;
+            
+        }
+
+        html{
+            background-image: url(img/tartan.png);
+            background-repeat: no-repeat;
+            background linear-radient{ top bottom, rgb(210,190,190), rgb(2,200,200)};
+            background-position: top right;
+            background-attachment: scroll;
+        }
+    </style>
 </head>
 <body>
+    <div id="futbol">
+        <p>Probando la imagen de fondo del div</p>
+    </div>
     <h1>Imagenes</h1>
+
+    <h1>Video</h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
 </body>
 </html>
