--- a/multimedia/multimedia.html
+++ b/multimedia/multimedia.html
@@ -21,7 +21,7 @@
         html{
             background-image: url(img/tartan.png);
             background-repeat: no-repeat;
-            background linear-radient{ top bottom, rgb(210,190,190), rgb(2,200,200)};
+            background: linear-gradient(bottom, rgb(210,190,190), rgb(2,200,200));
             background-position: top right;
             background-attachment: scroll;
         }
