--- a/texto/texto.html
+++ b/texto/texto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     
      <!--<style>
         h1{
@@ -22,6 +22,30 @@
     <title>Document</title>
 </head>
 <body>
-   fdgfjkl 
+   
+   <h1>
+        <pre>
+            Cuántas veces, amor, te amé sin verte y tal vez sin recuerdo,
+            sin reconocer tu mirada, sin mirarte, centaura,
+            en regiones contrarias, en un mediodía quemante:
+            eras sólo el aroma de los cereales que amo.
+
+           <span class="hugo">Tal vez te vi, te supuse al pasar levantando una copa
+            en Angol, a la luz de la luna de Junio,
+            o eras tú la cintura de aquella guitarra
+            que toqué en las tinieblas y sonó como el mar desmedido.</span> 
+
+            Te amé sin que yo lo supiera, y busqué tu memoria.
+            En las casas vacías entré con linterna a robar tu retrato.
+            Pero yo ya sabía cómo era. De pronto
+
+            mientras ibas conmigo te toqué y se detuvo mi vida:
+            frente a mis ojos estabas, reinándome, y reinas.
+            Como hoguera en los bosques el fuego es tu reino.
+        </pre>
+   </h1>
+
+    <mark><small><strong>Pablo Neruda</strong></small></mark>
+
 </body>
 </html>
